# loadstone

./: CMakeLists.txt  CMakePresets.json  LICENCE.md  README.md
cmake/toolchains/: unknown-linux-clang.cmake  unknown-linux-gcc.cmake  x86_64-windows-mingw32.cmake
cmake/util/: dual_toolchain.cmake
examples/lsload/: CMakeLists.txt  lsload.cpp
examples/plugin/: CMakeLists.txt  host.c  host.h  plugin-bar.c  plugin-foo.c
examples/plugin/host/: host.c  host.h
examples/plugin/module/: CMakeLists.txt  plugin-bar.c  plugin-foo.c  plugin-foo.h
include/: loadstone.h
src/: common.h  loadstone.c  unix.h  unix.inl  windows.h  windows.inl
